# ticketreservation

./: .gitignore  CMakeLists.txt  EventModel.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
api/: api.cpp  api.hpp
database/: database.cpp  database.hpp
models/: event.cpp  event.hpp  reservation.cpp  reservation.hpp  user.cpp  user.hpp
ui/: mainwindow.cpp  mainwindow.h
utils/: EventModel.h
